K8s/Fast-API/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-project-api-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"                     # Specifies NLB instead of CLB
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"               # Set to "true" for an internal (private) NLB
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "TCP"     # Health check protocol
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "80"          # Health check port
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "20"      # Health check interval (in seconds)
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "10"       # Health check timeout
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "3"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "3"
spec:
  type: ClusterIP
  ports:
    - port: 80                               # External port of the NLB
      targetPort: 8000                          # Port on the application pods
      protocol: TCP
  selector:
    app: test-project-api                     # Make sure this matches the label on your pods
